<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">%1$s won&apos;t run unless you update the Android Wear app.</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">%1$s won&apos;t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">%1$s won&apos;t run without Google Play services, which are missing from your phone.</string>
    <string name="common_google_play_services_install_text_tablet">%1$s won&apos;t run without Google Play services, which are missing from your tablet.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won&apos;t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won&apos;t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="cube_ptr_hours_ago"> hours ago</string>
    <string name="cube_ptr_last_update">last update: </string>
    <string name="cube_ptr_minutes_ago"> minutes ago</string>
    <string name="cube_ptr_pull_down">Pull Down</string>
    <string name="cube_ptr_pull_down_to_refresh">Pull Down to Refresh</string>
    <string name="cube_ptr_refresh_complete">Updated.</string>
    <string name="cube_ptr_refreshing">Updating...</string>
    <string name="cube_ptr_release_to_refresh">Release To Refresh</string>
    <string name="cube_ptr_seconds_ago"> seconds ago</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_done">Done</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="address">address</string>
    <string name="afternoon">GOOD AFTERNOON</string>
    <string name="all">All</string>
    <string name="app_name">#PAP4SG</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="branch">branch info</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="candidates">Representatives</string>
    <string name="close">Close</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_tooltip_default">New! You&apos;re in control - choose what info you want to share with apps.</string>
    <string name="day">GOOD DAY</string>
    <string name="email">email</string>
    <string name="error">Error</string>
    <string name="evening">GOOD EVENING</string>
    <string name="facebook">facebook</string>
    <string name="facebook_app_id">454965408040546</string>
    <string name="facebook_app_secret">88d2dd5cce0cf218e7e329abda9a2054</string>
    <string name="field_required">Required field</string>
    <string name="first_name">First Name</string>
    <string name="ga_trackingId">UA-67873217-1</string>
    <string name="gcm_defaultSenderId">583411287709</string>
    <string name="gcm_key">AIzaSyAwcOWCxIyITCTM5bk3bim4J2fLMzpdB8o</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="hotline">hotline</string>
    <string name="instagram">instagram</string>
    <string name="keep_touch">Keep in Touch</string>
    <string name="lets_go">Let&apos;s Go</string>
    <string name="loading">loading ...</string>
    <string name="manifesto">About Us</string>
    <string name="morning">GOOD MORNING</string>
    <string name="my_reps">My Representatives</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="news">News</string>
    <string name="no_connection">Please turn on your WIFI or Data Connection to continue</string>
    <string name="no_connection_title">Cannot Load Page</string>
    <string name="ok">OK</string>
    <string name="onboard_message">We&apos;d like to personalize your mobile experience</string>
    <string name="open">Open</string>
    <string name="opt_out_message">Do sign in to the app with your Name and Postal Code for a more personalise experience! \n\nYour information is confidential and will only be used within this app</string>
    <string name="pinterest">pinterest</string>
    <string name="postal_code">Postal Code</string>
    <string name="pref_email">Your Email</string>
    <string name="pref_name">Your Name</string>
    <string name="pref_news_letter">Newsletter</string>
    <string name="pref_news_letter_sub">Sign up for our latest updates</string>
    <string name="pref_pdpa">PDPA</string>
    <string name="pref_postal">Postal Code</string>
    <string name="pref_terms">Terms of Use</string>
    <string name="prefereces">Preferences</string>
    <string name="remind">Remind Me Later</string>
    <string name="reminder">Reminder</string>
    <string name="replay">Replay</string>
    <string name="save">Save</string>
    <string name="see_candidate">Click to view the profile and photos of the new Candidates</string>
    <string name="settings_button_text">Settings</string>
    <string name="share">Share</string>
    <string name="squarecamera__action_settings">Settings</string>
    <string name="squarecamera__app_name">PAP4SG</string>
    <string name="squarecamera__auto_flash">Auto Flash</string>
    <string name="squarecamera__cancel">Cancel</string>
    <string name="squarecamera__capture_image">Snap It!</string>
    <string name="squarecamera__capturing_image">Taking New Picture</string>
    <string name="squarecamera__done">Done</string>
    <string name="squarecamera__flash">Flash</string>
    <string name="squarecamera__no_flash">No Flash</string>
    <string name="squarecamera__recapture_image">Retake Picture</string>
    <string name="squarecamera__save_image">Save</string>
    <string name="squarecamera__start_image_capture">Take New Picture!</string>
    <string name="squarecamera__swap_camera">Swap</string>
    <string name="stay_update">Stay updated on the latest news and happenings in your neighbourhood</string>
    <string name="sticker">Sticker</string>
    <string name="town_council">Town Council</string>
    <string name="twitter">twitter</string>
    <string name="website">website</string>
    <string name="you_family">You and Your Family</string>
</resources>