<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res-auto" mi:layout_width="match_parent" mi:layout_height="match_parent" mi:animateLayoutChanges="true">
    <ImageView mi:id="@+id/img_background" mi:layout_width="match_parent" mi:layout_height="match_parent" mi:src="@drawable/onboarding_am_bg" mi:scaleType="fitXY" />
    <RelativeLayout mi:layout_width="match_parent" mi:layout_height="match_parent">
        <sg.org.pap.pickle.ui.pickle.StyledTextView mi:textAppearance="@style/Base_TextAppearance_AppCompat_Large" mi:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" mi:id="@+id/tv_greeting" mi:layout_width="match_parent" mi:layout_height="wrap_content" mi:layout_marginTop="@dimen/double_text_margin" mi:text="@string/day" mi:font="MyriadPro-Bold.otf" />
        <ImageView mi:id="@+id/img_divider" mi:layout_width="match_parent" mi:layout_height="wrap_content" mi:layout_marginTop="-8dp" mi:src="@drawable/gray_line" mi:layout_below="@+id/tv_greeting" />
        <sg.org.pap.pickle.ui.pickle.StyledTextView mi:textAppearance="@style/Base_TextAppearance_AppCompat_Large" mi:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" mi:id="@+id/tv_message" mi:layout_width="match_parent" mi:layout_height="wrap_content" mi:layout_margin="@dimen/text_margin" mi:text="@string/onboard_message" mi:layout_below="@+id/img_divider" mi:font="MyriadPro-Light.otf" />
        <sg.org.pap.pickle.ui.pickle.StyledEditText mi:textAppearance="@style/Base_TextAppearance_AppCompat_Medium" mi:textColor="0x106000c" mi:textColorHint="@color/dark_gray" mi:id="@+id/edt_name" mi:background="@drawable/textfield" mi:layout_width="match_parent" mi:layout_height="wrap_content" mi:hint="@string/first_name" mi:singleLine="true" mi:layout_above="@+id/edt_postal" mi:imeOptions="actionNone|actionSearch|actionSend|actionNext|actionDone|actionPrevious" mi:font="MyriadPro-Light.otf" />
        <sg.org.pap.pickle.ui.pickle.StyledEditText mi:textAppearance="@style/Base_TextAppearance_AppCompat_Medium" mi:textColor="0x106000c" mi:textColorHint="@color/dark_gray" mi:id="@+id/edt_postal" mi:background="@drawable/textfield" mi:layout_width="match_parent" mi:layout_height="wrap_content" mi:layout_marginBottom="@dimen/double_text_margin" mi:hint="@string/postal_code" mi:singleLine="true" mi:layout_above="@+id/btn_login" mi:imeOptions="actionGo|actionSearch|actionSend|actionNext|actionDone|actionPrevious" mi:font="MyriadPro-Light.otf" />
        <sg.org.pap.pickle.ui.pickle.StyledButton mi:id="@+id/btn_login" mi:background="@drawable/red_btn_selector" mi:layout_width="match_parent" mi:layout_height="wrap_content" mi:layout_marginLeft="@dimen/double_text_margin" mi:layout_marginRight="@dimen/double_text_margin" mi:text="@string/lets_go" mi:layout_above="@+id/tv_remind" mi:font="MyriadPro-Semibold.otf" />
        <sg.org.pap.pickle.ui.pickle.StyledTextView mi:textColor="0x106000b" mi:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" mi:id="@+id/tv_remind" mi:padding="@dimen/control_spacing" mi:layout_width="match_parent" mi:layout_height="wrap_content" mi:layout_marginTop="@dimen/double_text_margin" mi:layout_marginBottom="@dimen/double_double_text_margin" mi:text="@string/remind" mi:layout_alignParentBottom="true" mi:font="MyriadPro-Semibold.otf" />
    </RelativeLayout>
</FrameLayout>
